Modal containers are incorrectly detected in navigation elements and fixed document elements https://bugs.webkit.org/show_bug.cgi?id=234669 rdar://87030613

Reviewed by Darin Adler.

Source/WebCore:

Avoid false positives when detecting modal containers in the following scenarios:
- Fixed-position document elements that contain the search term.
- Text that contains the search term inside fixed-position navigation elements.

Additionally, ensure that we unhide the current modal container in the event of a false positive where we find
no element that fulfills the criteria for being a classifiable control.

Tests:  ModalContainerObservation.IgnoreFixedDocumentElement
        ModalContainerObservation.IgnoreNavigationElements
        ModalContainerObservation.ShowModalContainerAfterFalsePositive

* page/ModalContainerObserver.cpp:
(WebCore::accessibilityRole):

Move this static helper function farther up this source file, so that we can use it inside
`updateModalContainerIfNeeded()`.

(WebCore::isInsideNavigationElement):
(WebCore::ModalContainerObserver::updateModalContainerIfNeeded):
(WebCore::ModalContainerPolicyDecisionScope::ModalContainerPolicyDecisionScope):
(WebCore::ModalContainerPolicyDecisionScope::~ModalContainerPolicyDecisionScope):
(WebCore::ModalContainerPolicyDecisionScope::continueHidingModalContainerAfterScope):
(WebCore::ModalContainerPolicyDecisionScope::document const):

Add a RAII helper object to ensure that the modal container is revealed at the end of the modal container policy
decision scope, unless `continueHidingModalContainerAfterScope()` is invoked. Since this class contains a
`WeakPtr<Document>` already, we can replace the `WeakPtr<Document>` we're currently plumbing through each of the
async callbacks with only the `ModalContainerPolicyDecisionScope`, and just grab the document (or null if it was
destroyed) from the scope object.

This helper object allows us to avoid sprinkling ad-hoc calls to `revealModalContainer()` when exiting modal
container classification codepaths.

(WebCore::ModalContainerObserver::collectClickableElementsTimerFired):
* page/ModalContainerObserver.h:

Tools:

Add several new API tests to exercise the changes.

* TestWebKitAPI/Tests/WebKitCocoa/ModalContainerObservation.mm:
(-[ModalContainerWebView initWithFrame:configuration:]):
(-[ModalContainerWebView loadHTML:]):
(-[ModalContainerWebView _webView:decidePolicyForModalContainer:decisionHandler:]):
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/245640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287505 268f45cc-cd09-0410-ab3c-d52691b4dbfc